[package]
name = "rism"
version = "1.1.1"
edition = "2021"

[lib]
name = "rism"
path = "src/lib.rs"

[[bin]]
name = "rism"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
indicatif = "0.17.8"
console = "0.15.8"
tabled = "0.15.0"
z3 = { version = "0.12.1", optional = true}

[features]
default = ["model-checking"]
model-checking = ["dep:z3"]
static-link-z3 = ["model-checking", "z3/static-link-z3"]
